sdk/cpp/include/verdandi/c/catalog.h

/// 一个常驻监听和至多一个临时同步任务组成的 Catalog Subscriber。
typedef struct verdandi_catalog_subscriber verdandi_catalog_subscriber;
/// 一个在 Subscriber 生命周期内保持 Path 身份稳定的 Entry。
typedef struct verdandi_catalog_entry verdandi_catalog_entry;
/// 一个不拥有的 Catalog Path。
typedef struct verdandi_catalog_path_view {
    verdandi_string_view part;
    verdandi_string_view id;
} verdandi_catalog_path_view;
/// 查找覆盖范围内的稳定 Entry；未覆盖时 found 为零且 output 保持为空。
VERDANDI_C_API int VERDANDI_C_CALL verdandi_catalog_subscriber_find(verdandi_catalog_subscriber* subscriber, verdandi_catalog_path_view path, int* found,
                                                                    verdandi_catalog_entry** output, verdandi_error* error);
/// 非阻塞取得一条同步、恢复、检查点或协议诊断。
VERDANDI_C_API int VERDANDI_C_CALL verdandi_catalog_subscriber_try_error(verdandi_catalog_subscriber* value, int* available, verdandi_error* error);
/// 关闭常驻监听和当前临时同步任务。
VERDANDI_C_API int VERDANDI_C_CALL verdandi_catalog_subscriber_close(verdandi_catalog_subscriber* value, verdandi_error* error);
/// 尽力关闭并释放 Subscriber。
VERDANDI_C_API void VERDANDI_C_CALL verdandi_catalog_subscriber_release(verdandi_catalog_subscriber* value);
/// 借用 Entry 的 Path Part；视图在 Entry 释放前有效。
VERDANDI_C_API verdandi_string_view VERDANDI_C_CALL verdandi_catalog_entry_part(const verdandi_catalog_entry* value);
/// 借用 Entry 的 Path ID；视图在 Entry 释放前有效。
VERDANDI_C_API verdandi_string_view VERDANDI_C_CALL verdandi_catalog_entry_id(const verdandi_catalog_entry* value);
/// 返回稳定小写状态 synchronizing/present/absent/deleted/unavailable/closed。
VERDANDI_C_API const char* VERDANDI_C_CALL verdandi_catalog_entry_status(const verdandi_catalog_entry* value);
/// 返回 Entry 最后已知完整 revision。
VERDANDI_C_API uint64_t VERDANDI_C_CALL verdandi_catalog_entry_revision(const verdandi_catalog_entry* value);
/// 返回 Entry 当前状态是否为同步完成。
VERDANDI_C_API int VERDANDI_C_CALL verdandi_catalog_entry_is_synchronized(const verdandi_catalog_entry* value);
/// 从同一个不可变状态读取完整 Fields；没有 Value 时 present 为零且 output 为空。
VERDANDI_C_API int VERDANDI_C_CALL verdandi_catalog_entry_load(const verdandi_catalog_entry* value, uint64_t* revision, const char** status, int* synchronized,
                                                               int* present, verdandi_field_set** output, verdandi_error* error);
/// 释放稳定 Entry 句柄；不影响 Subscriber 内部身份。
VERDANDI_C_API void VERDANDI_C_CALL verdandi_catalog_entry_release(verdandi_catalog_entry* value);