sdk/csharp/src/Verdandi/Internal/NativeMethods.cs


    /// <summary>在订阅范围内查找稳定 Entry。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_subscriber_find")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogSubscriberFind(
        CatalogSubscriberHandle subscriber,
        NativeCatalogPathView path,
        int* found,
        nint* output,
        NativeError* error);

    /// <summary>非阻塞读取 Catalog Subscriber 异步诊断。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_subscriber_try_error")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogSubscriberTryError(CatalogSubscriberHandle value, int* available, NativeError* error);

    /// <summary>关闭 Catalog Subscriber。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_subscriber_close")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogSubscriberClose(CatalogSubscriberHandle value, NativeError* error);

    /// <summary>释放 Catalog Subscriber；仅由 SafeHandle 调用。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_subscriber_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CatalogSubscriberRelease(nint value);

    /// <summary>借用 Catalog Entry Part。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_entry_part")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStringView CatalogEntryPart(CatalogEntryHandle value);

    /// <summary>借用 Catalog Entry ID。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_entry_id")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStringView CatalogEntryId(CatalogEntryHandle value);

    /// <summary>借用 Catalog Entry 稳定状态字符串。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_entry_status")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nint CatalogEntryStatus(CatalogEntryHandle value);

    /// <summary>读取 Catalog Entry revision。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_entry_revision")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ulong CatalogEntryRevision(CatalogEntryHandle value);

    /// <summary>读取 Catalog Entry 同步状态。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_entry_is_synchronized")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogEntryIsSynchronized(CatalogEntryHandle value);

    /// <summary>从同一个不可变 Catalog Entry 状态加载完整 Fields。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_entry_load")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogEntryLoad(
        CatalogEntryHandle value,
        ulong* revision,
        nint* status,
        int* synchronized,
        int* present,
        nint* output,
        NativeError* error);

    /// <summary>释放 Catalog Entry；仅由 SafeHandle 调用。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_entry_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CatalogEntryRelease(nint value);
}

/// <summary>
/// 安装跨平台原生库解析并在第一次打开 Client 前验证 C ABI 版本。
/// </summary>
internal static class NativeRuntime
{
    private const uint RequiredAbiVersion = 1;
    private static readonly object Gate = new();
    private static bool _resolverInstalled;

    /// <summary>
    /// 确保当前进程只安装一次本程序集的解析器，并把加载、位数或 ABI 错误转换为稳定失败。
    /// </summary>
    /// <returns>ABI v1 可调用时成功，否则返回 unavailable/incompatible。</returns>
    internal static Result CheckAbi()
    {
        try
        {
            EnsureResolver();
            var actual = NativeMethods.AbiVersion();
            return actual == RequiredAbiVersion
                ? Result.Success()
                : Result.Failure(new VerdandiError("incompatible", "abi", $"Expected ABI {RequiredAbiVersion}, received {actual}."));
        }
        catch (EntryPointNotFoundException exception)
        {
            return Result.Failure(new VerdandiError("incompatible", "abi", exception.Message));
        }
        catch (BadImageFormatException exception)
        {
            return Result.Failure(new VerdandiError("incompatible", "native_library", exception.Message));
        }
        catch (DllNotFoundException exception)
        {
            return Result.Failure(new VerdandiError("unavailable", "native_library", exception.Message));
        }
        catch (Exception exception)
        {
            return Result.Failure(new VerdandiError("unavailable", "native_library", exception.Message));
        }
    }

    /// <summary>
    /// 在锁内安装程序集级解析器；后续 P/Invoke 走运行库已经缓存的原生模块。
    /// </summary>
    private static void EnsureResolver()
    {
        if (Volatile.Read(ref _resolverInstalled))
        {
            return;
        }

        lock (Gate)
        {
            if (Volatile.Read(ref _resolverInstalled))
            {
                return;
            }

            NativeLibrary.SetDllImportResolver(typeof(NativeMethods).Assembly, Resolve);
            Volatile.Write(ref _resolverInstalled, true);
        }
    }

    /// <summary>
    /// 依次检查显式路径、NuGet RID 目录和应用目录；返回零时交给操作系统默认加载规则。
    /// </summary>
    /// <param name="libraryName">P/Invoke 声明的逻辑库名。</param>
    /// <param name="assembly">发起加载的程序集。</param>
    /// <param name="searchPath">运行库建议的默认搜索规则。</param>
    /// <returns>已加载模块句柄，或零以继续默认解析。</returns>
    private static nint Resolve(string libraryName, Assembly assembly, DllImportSearchPath? searchPath)
    {
        _ = assembly;
        _ = searchPath;
        if (!StringComparer.Ordinal.Equals(libraryName, NativeMethods.LibraryName))
        {
            return nint.Zero;
        }

        var configured = Environment.GetEnvironmentVariable("VERDANDI_NATIVE_LIBRARY");
        if (!string.IsNullOrWhiteSpace(configured))
        {
            return NativeLibrary.Load(configured);
        }

        var fileName = RuntimeInformation.IsOSPlatform(OSPlatform.Windows)
            ? "verdandi_cpp.dll"
            : RuntimeInformation.IsOSPlatform(OSPlatform.OSX)
                ? "libverdandi_cpp.dylib"
                : "libverdandi_cpp.so";
        var ridPath = Path.Combine(AppContext.BaseDirectory, "runtimes", RuntimeInformation.RuntimeIdentifier, "native", fileName);
        if (NativeLibrary.TryLoad(ridPath, out var handle))
        {
            return handle;
        }

        var applicationPath = Path.Combine(AppContext.BaseDirectory, fileName);
        return NativeLibrary.TryLoad(applicationPath, out handle) ? handle : nint.Zero;
    }
}
